查看堆内存的内存分配情况